# fast-deploy

./: .readthedocs.yaml  README.md  dockerfile  mkdocs.yml  pyproject.toml
.github/workflows/: ci-pipeline.yaml
docs/: 01_tutorial.md  02_contribua.md  index.md
docs/api/: api.md  cli.md  loaders.md  model_loader.md
docs/stylesheets/: extra.css
docs/templates/: instalacao.md  todos.md
fast_deploy/: cli.py  model_loader.py
fast_deploy/api/: main.py
fast_deploy/loaders/: sklearn_loader.py
tests/: test_model_loader.py  test_sklearn_model_loader.py
